Built in support for RobotState